tests/sumo/meso/junction_control/tls_coordination/bad/control.limited_tlsPenalty/output.sumo
Loading net-file from 'net.net.xml' ... done (1ms).
Loading additional-files from 'input_additional.add.xml' ... done (0ms).
Loading route-files incrementally from 'input_routes.rou.xml'
Loading done.
Simulation version v1_23_1+0050-0740a6fa2d2 started with time: 0.00.
Simulation ended at time: 194.00.
Reason: All vehicles have left the simulation.
Performance:
 Duration: 0.00s
 Real time factor: 97000
 UPS: 1120000.000000
Vehicles:
 Inserted: 30
 Running: 0
 Waiting: 0
Statistics (avg of 30):
 RouteLength: 300.00
 Speed: 4.08
 Duration: 74.67
 WaitingTime: 0.00
 TimeLoss: 52.56
 DepartDelay: 16.30
